src/objects/Application__c.object
<CustomObject>
    <description>Customer Applications that are currently using MicroStrategy software.</description>
    <fields>
        <fullName>DSI__c</fullName>
        <description>The DSI within which this application is being used.</description>
        <inlineHelpText>The DSI within which this application is being used.</inlineHelpText>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer executive sponsoring this application.</description>
        <inlineHelpText>Customer executive sponsoring this application.</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <description>Number of users actively using this application.</description>
        <inlineHelpText>Number of users actively using this application.</inlineHelpText>
        <label># Users</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>